# Sorcery

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh  main.cpp
.cache/clangd/index/: AutoRotate.cpp.87B56B8DE42128DB.idx  AutoRotate.h.51336B7772C0B037.idx  Camera.cpp.5919017DD0519244.idx  Camera.cpp.ED4904148FF82C3D.idx  Camera.h.F8BF7E302A46DE4D.idx  Component.cpp.CD9E7B2D6F73A91D.idx  Component.cpp.ED3534E3FE39D747.idx  Component.h.22D032D13EC82FF5.idx  GameObject.cpp.61B222E438D2DA54.idx  GameObject.cpp.ABD1F1182DC72A32.idx  GameObject.h.FD7C9F4B9523764C.idx  Light.cpp.0CD13CDF72C173A7.idx  Light.cpp.C02135DD2F6C28FC.idx  Light.h.B42E7A69D22F0C8E.idx  Material.h.78671071FC307BE6.idx  Math.h.D8446F937CAFF16B.idx  Mesh.cpp.1AFF8F8FE4367CF1.idx  Mesh.cpp.A6E0A3E3BF219E52.idx  Mesh.h.5EE8A8210D29361F.idx  MeshRenderer.h.583DB5C667AC8ADE.idx  Model.cpp.358216F77D67E08A.idx  Model.cpp.E66647D828E98D9A.idx  Model.h.7A7A06D81FDCDBEB.idx  Procedural.cpp.0DF004BA9A628625.idx  Procedural.cpp.758EB90824BF5DE8.idx  Procedural.h.9158090E44E2B5D1.idx  Renderer.cpp.372BD1C7B0CBE965.idx  Renderer.cpp.4304EF5169DAAF09.idx  Renderer.h.76C51841DF5E865B.idx  Scene.cpp.ACA00754C59ACD95.idx  Scene.cpp.C9DE33A13CEB8658.idx  Scene.h.AAE9280597A727C0.idx  Shader.cpp.A7A5D3DCB6411E51.idx  Shader.cpp.C3CDCE2F14E8D79A.idx  Shader.h.0A11B08B3092442E.idx  Texture.cpp.347745BBCE0C22B7.idx  Texture.cpp.F882A43E0B7BC16E.idx  Texture.h.D6D9AC593B4BA896.idx  Transform.cpp.76980A19DB100FB7.idx  Transform.cpp.F100E3095062FCF5.idx  (+199 more)
.cursor/rules/: developer-role.mdc  project-structure.mdc  self-improve.mdc  tech-stack.mdc
docs/: engine-architecture.md  main.cpp
docs/include/engine/: Procedural.h  Scene.h
docs/src/: Procedural.cpp  Scene.cpp
docs/src/shaders/: city_layout.fs
editor/: build.sh  editor.cpp
include/engine/: Application.h  AutoRotate.cpp  AutoRotate.h  Camera.h  CharacterController.cpp  CharacterController.h  Component.h  GameObject.cpp  GameObject.h  Light.h  Material.h  Math.h  Mesh.h  MeshRenderer.h  Model.cpp  Model.h  PhysicsLayers.h  PhysicsSystem.cpp  PhysicsSystem.h  Procedural.cpp  Procedural.h  Renderer.cpp  Renderer.h  RigidBody.cpp  RigidBody.h  Scene.h  Shader.cpp  Shader.h  SorceryContactListener.cpp  SorceryContactListener.h  Texture.cpp  Texture.h  Transform.h  Window.h
include/glad/: glad.c  glad.h
src/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Procedural.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Window.cpp
src/models/floor/: pixel_floor.mtl
src/shaders/: city_layout.gs  city_layout.vs  container.fs  light.fs  vertex.vs
